--- a/CSS/partials/_game.scss
+++ b/CSS/partials/_game.scss
@@ -56,6 +56,7 @@
     padding: 5px;
     @media screen and (max-width: 1280px) {
         visibility: hidden;
+        height: 864 !important;
     }
     #GameTitle{
         text-align: center;
