--- a/CSS/partials/_index.scss
+++ b/CSS/partials/_index.scss
@@ -5,7 +5,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     @media screen and (max-width: 828px){
-        background-size: contain;
         background-position: center;
         background-repeat: repeat;
     }
